design payment-view

--- a/src/assets/css/info.scss
+++ b/src/assets/css/info.scss
@@ -1,13 +1,20 @@
 .bg_check-date {
-    background-color: #f2f3f3;
-  }
+  background-color: #f2f3f3;
+}
   
-  .margin-text {
-    margin-right: 12px;
-  }
+.margin-text {
+  margin-right: 12px;
+}
   
-  .color_wifi {
-    color: #0bc175;
-    font-weight: 500;
-  }
+.color_wifi {
+  color: #0bc175;
+  font-weight: 500;
+}
+
+.text-size {
+  font-size: 12px;
+  word-spacing: 2px;
+  line-height: 1.2;
+  font-weight: 600;
+}
   
